@@ -88,7 +88,7 @@
 //-- AL_HOLYWATER
 31,1000,500,0,0,0
 //-- AL_CRUCIS
-32,500,2000,0,0,0
+32,500,2000,0,60000,0
 //-- AL ANGELUS
 33,500,3500,0,30000:60000:90000:120000:150000:180000:210000:240000:270000:300000,0
 //-- AL_BLESSING
